# ArcPay

./: .gitignore  .gitmodules  LICENSE.md  README.md  setup.md
circuits/: Cargo.toml  README.md  package.json
circuits/circuit_input_macro/: Cargo.toml
circuits/circuit_input_macro/circuit_input_macro_derive/: Cargo.toml
circuits/circuit_input_macro/circuit_input_macro_derive/src/: lib.rs
circuits/circuit_input_macro/src/: lib.rs
circuits/circuits/: distribute.circom  hash.circom  merkle_tree.circom  mint.circom  package-lock.json  package.json  parameters.toml  send.circom  sig.circom  transaction.circom  trusted_setup_install.sh  tx.circom  withdraw.circom
circuits/circuits/claiming/: challenge.circom  distribute.circom  utils.circom
circuits/circuits/distribute/: README.md  filter.circom
circuits/circuits/test/: transaction.circom  withdraw.circom  withdraw_test.ts
circuits/inputs/: mint.json  withdraw.json
circuits/nova_macro/: Cargo.toml
circuits/nova_macro/nova_macro_derive/: Cargo.toml
circuits/nova_macro/nova_macro_derive/src/: lib.rs
circuits/nova_macro/src/: lib.rs
circuits/scripts/: filter.js  gen_keys.sh  mint.js  package-lock.json  package.json  poseidon.js  util.js  withdraw.js
circuits/src/: filter.rs  lib.rs  mint.rs  nova.rs  withdraw.rs
operator/: package.json  pnpm-lock.yaml
script/: ArcPay.s.sol
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/merkle/: merkle.rs  mod.rs
server/src/model/: mod.rs
server/src/routes/: mod.rs
src/: Altitude.sol  ArcPay.sol  IncrementalBinaryTree.sol  TimelockedAdmin.sol
test/: Altitude.t.sol  ArcPay.t.sol  ArcPayV2.sol
