[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nova"
path = "src/lib.rs"

[dependencies]
nova-scotia = "0.4.0"
nova-snark = { version = "0.21.0", default-features = false }
serde = "1.0"
serde_json = "1.0.96"
ff = { version = "0.13", features = ["derive"]}
circuit_input_macro = { path = "circuit_input_macro" }
circuit_input_macro_derive = { path = "circuit_input_macro/circuit_input_macro_derive" }
